--- a/imgui.ini
+++ b/imgui.ini
@@ -3,3 +3,23 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][]
+Pos=60,60
+Size=292,82
+Collapsed=0
+
+[Window][qy@]
+Pos=60,60
+Size=212,48
+Collapsed=0
+
+[Window][Qy@]
+Pos=60,60
+Size=212,48
+Collapsed=0
+
+[Window][Debug]
+Pos=60,60
+Size=212,48
+Collapsed=0
+
